--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image displaying a testimonial anatomy.](https://github.com/primer/brand/assets/912236/c9348fc5-36f4-40f8-a1ec-60bd84d37535)
+![An image displaying a the CTA Form anatomy, with a label on top of an input form, followed by a CTA button and optional checkbox underneath the input.](https://github.com/primer/brand/assets/912236/c9348fc5-36f4-40f8-a1ec-60bd84d37535)
 
 - Label: Short text that describes the required input form. 
 - Input: A form requesting information. 
@@ -26,67 +26,29 @@ By adopting the same guidelines as the [respective form component](/components/T
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/dd1a3e57-d94f-4f62-9840-67fce2cd78d2" />
-    <Caption>Use short and concise quotes.</Caption>
+    <Caption>Place the CTA FOrm near the end of the page to conclude the user journey, summarize key information, and encourage users to take action.</Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/e6c7e682-9948-4238-bc74-f26d705cce65" />
     <Caption>
-      Don't use long quotes that can be hard to read and understand.
+      Don't place the CTA Form early on in the user journey. Provide necessary information through the user journey of the site to give context on the CTA. 
     </Caption>
   </Dont>
 </DoDontContainer>
 
-Avatars and logos are optional and can be used to provide more credibility about the customer or the company. When using an avatar, use an image of the customer to make the testimonial more personal. If an image is not available, use a logo or a similar visual asset that represents the customer company or the organization.
+Keep the form design simple and intuitive to minimize friction and encourage user engagement. Ensure there is enough context surrounding the CTA Action and. Utilize the Label to explain the requested input, not the provide context. 
 
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/8968b579-1ff6-490e-a5a2-2abd2da588e5" />
     <Caption>
-      Use a real life image of the customer or the logo of the company.
+      Include context at areas surrounding the CTA Form to share the purpose of completing the input. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/bcda5e31-1ccc-44a5-9d65-2f6aad326f4b" />
     <Caption>
-      Don't use illustrations or generic images. Use real life images to provide trust.
-    </Caption>
-  </Dont>
-</DoDontContainer>
-
-Testimonials can be used individually or in a group. When using a group of testimonials, use the same size and alignment for all of them. When including an avatar or a logo, use them in all testimonials of the group and keep the same style and size— don't alternate between logos and avatars. We recommend using a maximum of 4 testimonials per group to avoid visual noise and to keep the quotes relevant.
-
-<DoDontContainer stacked>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/912236/06a41538-6fca-4145-b1f5-7de16a8e078d" />
-    <Caption>
-      Use a maximum of 3 or 4 testimonials per group, with the same size and
-      alginment.
-    </Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/ed834a59-65e9-4933-a9c7-ace37843c7a6" />
-    <Caption>
-      Don't use different sizes, alignments or alternate avatars and logos for
-      groups of testimonials.
-    </Caption>
-  </Dont>
-</DoDontContainer>
-
-Use a single testimonial to highlight a specific feature or benefit of the product. Use multiple testimonials to showcase each feature when in a list or a [river](/components/River).
-
-<DoDontContainer>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/912236/d59eff28-6db4-4f7a-a8c4-8fb69716edd7" />
-    <Caption>
-      Use testimonials to enhance the credibility of an specific feature or
-      benefit.
-    </Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/7888cd46-6397-4a6f-8f62-63d3236f0a5c" />
-    <Caption>
-      Don't use multiple testimonials to showcase the same feature to avoid
-      visual noise.
+        Don't use the CTA Form without or between less relevant context. Use the Label of the CTA Form to describe the input required, not as space to provide context. 
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -95,59 +57,45 @@ Use a single testimonial to highlight a specific feature or benefit of the produ
 
 ### Size
 
-The testimonial component uses the small size by default. Use the large size to provide more visual weight.
+The testimonial component includes a medium and a small size option. Choose the sizing of the CTA Form to best ensure consistency in design and enhances user familiarity with the interface. Do not 
 
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/a10d6454-0b6e-4694-9acc-cdf48e31d922" />
     <Caption>
-      Use the large size when using a single, full-width testimonial.
+      hoose the sizing of the CTA Form to best ensure consistency in design. Keep the width of the component relative to the suggested input. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/34a502ea-4b32-4054-9518-4da63d86acf9" />
-    <Caption>Don't use small size for full-width testimonials.</Caption>
+    <Caption>Do not overly extend the CTA Form component. Keep the width relative to the suggested input.</Caption>
   </Dont>
 </DoDontContainer>
+
+### Checkbox
+
+Use the checkbox property in the CTA form to prompt additional user behavior or seek acknowledgment– examples include to gather consent, confirm agreement to terms, or request optional actions. 
+
+It is crucial to provide a clear description of the checkbox's purpose and hyperlink to relevant resources. When using the checkbox, the checkbox must be a requirement (not optional) to proceed with the CTA.
 
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/91ee4072-41a3-4984-9af5-9c6f9b94135c" />
     <Caption>
-      Use the small size when paired with other components that showcase
-      features, like rivers.
+        Short concise text for the checkbox. Hyperlink to relevant resources and checkboxes must be required to proceed with the CTA.
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/63143585-1c28-4380-853d-a6e5dff6f8c1" />
     <Caption>
-      Don't use the large size in small sized areas or components like rivers, so
-      they don't conflict with the main content. Even if the quote is short, use
-      the small size instead.
+        Length text without linking further resources when possible. Checkboxes should not be optional to proceeding with the CTA.
     </Caption>
   </Dont>
 </DoDontContainer>
-
-<DoDontContainer stacked>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/912236/20e90276-8b6c-4e14-911b-f28b38eb7f7b" />
-    <Caption>Use the small size for single row groups of testimonials.</Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/136e559e-aa04-4814-99f7-f1f722ebb8e6" />
-    <Caption>
-      Don't use the large size in single row groups, even if the content is
-      short. Stack them vertically and use 2 columns instead.
-    </Caption>
-  </Dont>
-</DoDontContainer>
-
-### Alignment
-
-Testimonials can be aligned to the start or center of the container. Aligning to the start is the default and recommended behavior. Use center alignment only when the overall page design calls for this alignment and the quotes aren't too long to avoid the content from looking too spread out.
 
 ## Related components
 
-- [Pillar](/components/Pillar): To display related content with less visual emphasis.
-- [Card](/components/Card): To display navigational related content with higher visual weight.
-- [River](/components/River): To display navigational related content with higher visual weight.
+- [Button](/components/Button): To display a button that preforms an action.
+- [Form](/components/TextInput): To create an input form for single-line text field.
+- [Checkbox](/components/Checkbox): To select options or acknowledge information. 
+- [CTA Banner](/components/CTABanner): To draw attention to or create urgency around a user action.
