--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -12,16 +12,16 @@ export default ComponentLayout
 
 - Label: Short text that describes the required input form. 
 - Input: A form requesting information. 
-- Action: A call-to-action button that corresponds to the action the user needs to take.
+- Action: A call-to-action button that corresponds after completing the input form. 
 - Checkbox: An optional checkbox to request additional behavior or acknowledgement. 
 
 ## Usage
 
-The CTA form is designed to capture user input and facilitate essential actions on a website. It serves as an efficient tool to prompt user engagement and action. While it can be placed strategically throughout the page, it is commonly positioned at the bottom to conclude the user journey, summarize key information, and encourage users to take action.
+The CTA form is designed to capture user input and call to actions on a website. It serves as an efficient tool to prompt user engagement and action. While it can be placed strategically throughout the page, it is encouraged to be positioned at the bottom to conclude the user journey, summarize key information, and encourage users to take action.
 
-The CTA form presents a concise label, prompting users to provide specific input in the form field. Once users enter the required information, they can easily trigger the main call-to-action through a prominent button. Additionally, the CTA form supports an optional checkbox, allowing you to seek additional user behavior or acknowledge certain terms.
+The CTA form presents a concise label, prompting users to provide specific input in the form field. Once users enter the required information, they can trigger the call-to-action through the button. Additionally, the CTA form supports an optional checkbox to seek additional user behavior or acknowledge certain terms.
 
-By adopting the same guidelines as the [respective form component](/components/TextInput), [button component](/components/button), and [checkbox component](/components/checkbox), the CTA form ensures consistency in design and enhances user familiarity with the interface.
+By adopting the same guidelines as the respective [form](/components/forms/TextInput.mdx) component, [button component](/components/button), and [checkbox component](/components/checkbox), the CTA form ensures consistency in design and enhances user familiarity with the interface.
 
 <DoDontContainer>
   <Do>
