--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: CTA Form
-description: Use CTA Form to capture user input and action button.
+description: Use CTA Form to capture user input and call to action button.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
@@ -17,38 +17,38 @@ export default ComponentLayout
 
 ## Usage
 
-The CTA form is designed to capture user input and call to actions on a website. It serves as an efficient tool to prompt user engagement and action. While it can be placed strategically throughout the page, it is encouraged to be positioned at the bottom to conclude the user journey, summarize key information, and encourage users to take action.
+The CTA form is designed to capture user input and call to actions on a website. It serves as an efficient tool to prompt user engagement and action. While it can be placed throughout the page, it is encouraged to be positioned at the bottom to conclude the user journey, summarize key information, and encourage users to take action.
 
 The CTA form presents a concise label, prompting users to provide specific input in the form field. Once users enter the required information, they can trigger the call-to-action through the button. Additionally, the CTA form supports an optional checkbox to seek additional user behavior or acknowledge certain terms.
 
-By adopting the same guidelines as the respective [form](/components/forms/TextInput.mdx) component, [button component](/components/button), and [checkbox component](/components/checkbox), the CTA form ensures consistency in design and enhances user familiarity with the interface.
+By adopting the same guidelines as the respective [form](/components/forms/TextInput) component, [button](/components/Button) component, and [checkbox](/components/Checkbox) component, the CTA form ensures consistency in design and enhances user familiarity with the interface.
 
 <DoDontContainer>
   <Do>
 <img src="https://github.com/primer/brand/assets/131988618/561b62c9-c328-4c7e-98e5-18e5a5d7ad42" />
-    <Caption>Place the CTA FOrm near the end of the page to conclude the user journey, summarize key information, and encourage users to take action.</Caption>
+    <Caption>Place the CTA Form near the end of the page to conclude the user journey, summarize key information, and encourage users to take action.</Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/0cb06dc0-b885-4b4d-a997-cd42da72f798" />
     <Caption>
-      Don't place the CTA Form early on in the user journey. Provide necessary information through the user journey of the site to give context on the CTA. 
+      Don't place the CTA Form early on in the user journey. Use the Hero or CTA Banner component instead.
     </Caption>
   </Dont>
 </DoDontContainer>
 
-Keep the form design simple and intuitive to minimize friction and encourage user engagement. Ensure there is enough context surrounding the CTA Action and. Utilize the Label to explain the requested input, not the provide context. 
+Keep the CTA Form simple and intuitive to minimize friction and encourage user engagement. Ensure there is enough context surrounding the component. Utilize the label as a description of the form input. 
 
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/15cc3be6-89cb-4b63-ab03-9236693f66c3" />
     <Caption>
-      Include context at areas surrounding the CTA Form to share the purpose of completing the input. 
+      Include context at areas surrounding the CTA Form to encourage user engagement. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/2333fa03-4bd3-488d-ae41-81e3511259ca" />
     <Caption>
-        Don't use the CTA Form without or between less relevant context. Use the Label of the CTA Form to describe the input required, not as space to provide context. 
+        Don't use the CTA Form without sharing context. The label should be used to describe the input, not to provide context.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -57,18 +57,18 @@ Keep the form design simple and intuitive to minimize friction and encourage use
 
 ### Size
 
-The testimonial component includes a medium and a small size option. Choose the sizing of the CTA Form to best ensure consistency in design and enhances user familiarity with the interface. Do not 
+The CTA Form includes a medium and a small size option. Choose the sizing of the CTA Form to best ensure consistency in design and enhance user familiarity with the interface.
 
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/0bd93f12-ef38-4fc3-9dd5-ce685aa7d2bd" />
     <Caption>
-      hoose the sizing of the CTA Form to best ensure consistency in design. Keep the width of the component relative to the suggested input. 
+      Keep the width of the component relative to the suggested input. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/5ea3a93b-2978-4c50-b982-76c85ae57a01" />
-    <Caption>Do not overly extend the CTA Form component. Keep the width relative to the suggested input.</Caption>
+    <Caption>Don't overly extend the width of the CTA Form component.</Caption>
   </Dont>
 </DoDontContainer>
 
@@ -76,7 +76,7 @@ The testimonial component includes a medium and a small size option. Choose the 
 
 Use the checkbox property in the CTA form to prompt additional user behavior or seek acknowledgment– examples include to gather consent, confirm agreement to terms, or request optional actions. 
 
-It is crucial to provide a clear description of the checkbox's purpose and hyperlink to relevant resources. When using the checkbox, the checkbox must be a requirement (not optional) to proceed with the CTA.
+It is crucial to provide a clear description of the checkbox's purpose and hyperlink to relevant resources. When using the checkbox, completion of the checkbox must be a requirement (not optional) to proceed with the CTA.
 
 <DoDontContainer>
   <Do>
@@ -88,7 +88,7 @@ It is crucial to provide a clear description of the checkbox's purpose and hyper
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/52e87926-c18c-4748-851e-41fd1e86f5d8" />
     <Caption>
-        Length text without linking further resources when possible. Checkboxes should not be optional to proceeding with the CTA.
+        Don't use lengthy text without links. 
     </Caption>
   </Dont>
 </DoDontContainer>
