--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -52,7 +52,7 @@ In some layouts, you may need certain grid items to span specific amount of colu
 
 ### Grid vs Stack
 
-We'll use the grid or the [stack](/components/Stack) component depending how the child items are displayed and how are they expected to work on various screen sizes. If the element has all of its child items displayed inline, then most probably the stack component would be the best option. However, if you see columns and rows, then the use the grid component[^1].
+We recommend using the grid or the [stack](/components/Stack) component depending on how the child items are displayed and how are they expected to work on various screen sizes. If the element has all of its child items displayed inline, then most probably the stack component would be the best option. However, if you see columns and rows, then the use the grid component[^1].
 
 #### Grid examples
 
