--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Section intro
-description: Use section intro to provide a title, optional description and link to a new section in the page.
+description: Use the section intro component to provide a title, optional description and link to a new section in the page.
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
