[FAQ] Design guidelines (#323)
* FAQ guidelines

--- a/apps/docs/content/components/FAQ/react.mdx
+++ b/apps/docs/content/components/FAQ/react.mdx
@@ -7,10 +7,13 @@ storybook: '/brand/storybook/?path=/story/components-faq--default'
 description: Use the FAQ component to display content in a Q&A format.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
 import {HeadingTags} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 import {Label} from '@primer/react'
 
 ```js
