[SectionIntro] Design guidelines (#306)
* Add section intro design guidelines

--- a/apps/docs/content/components/SectionIntro/react.mdx
+++ b/apps/docs/content/components/SectionIntro/react.mdx
@@ -7,6 +7,9 @@ storybook: '/brand/storybook/?path=/story/components-SectionIntro--playground'
 description: Use the section intro component to provide a title, optional description and link to a new section in the page.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Label} from '@primer/react'
 
 ```js
