--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -63,12 +63,12 @@ The CTA Form includes a medium and a small size option. Choose the sizing of the
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/0bd93f12-ef38-4fc3-9dd5-ce685aa7d2bd" />
     <Caption>
-      Keep the width of the component relative to the suggested input. 
+      Keep the string length (width) of the component relative to the expected input. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/5ea3a93b-2978-4c50-b982-76c85ae57a01" />
-    <Caption>Don't overly extend the width of the CTA Form component.</Caption>
+    <Caption>Don't over extend or compress the CTA Form when possible.</Caption>
   </Dont>
 </DoDontContainer>
 
