--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -26,7 +26,7 @@ By adopting the same guidelines as the respective [form](/components/TextInput) 
 <DoDontContainer>
   <Do>
 <img src="https://github.com/primer/brand/assets/131988618/561b62c9-c328-4c7e-98e5-18e5a5d7ad42" />
-    <Caption>Place the CTA Form near the end of the page to conclude the user journey, summarize key information, and encourage users to take action.</Caption>
+    <Caption>Place the CTA Form near the end of the page to conclude the user journey and encourage users to take action.</Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/0cb06dc0-b885-4b4d-a997-cd42da72f798" />
@@ -42,13 +42,13 @@ Keep the CTA Form simple and intuitive to minimize friction and encourage user e
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/15cc3be6-89cb-4b63-ab03-9236693f66c3" />
     <Caption>
-      Include context at areas surrounding the CTA Form to encourage user engagement. 
+      Include context in areas surrounding the CTA Form to encourage user engagement. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/2333fa03-4bd3-488d-ae41-81e3511259ca" />
     <Caption>
-        Don't use the CTA Form without sharing context. The label should be used to describe the input, not to provide context.
+        Don't use the CTA Form without context. The label should be used to describe the input, not to provide context.
     </Caption>
   </Dont>
 </DoDontContainer>
